[gd_scene load_steps=6 format=3 uid="uid://bvxj8n7qk4w3z"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c8xj4n7qk4w3z" path="res://scenes/UI/NotificationManager.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.8, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 1.0, 0.4, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.2, 0.8, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 1.0, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopLeft" type="Control" parent="."]
anchors_preset = 4
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0

[node name="HealthBar" type="ProgressBar" parent="TopLeft"]
offset_left = 0.0
offset_top = 0.0
offset_right = 180.0
offset_bottom = 20.0
value = 100.0
theme_override_styles/fill = SubResource("StyleBoxFlat_2")
theme_override_styles/background = SubResource("StyleBoxFlat_1"

[node name="XPBar" type="ProgressBar" parent="TopLeft"]
offset_left = 0.0
offset_top = 25.0
offset_right = 180.0
offset_bottom = 45.0
value = 0.0
theme_override_styles/fill = SubResource("StyleBoxFlat_3"
theme_override_styles/background = SubResource("StyleBoxFlat_1"

[node name="LevelLabel" type="Label" parent="TopLeft"]
offset_left = 0.0
offset_top = 50.0
offset_right = 80.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Lv.1"

[node name="TopRight" type="Control" parent="."]
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0

[node name="ScoreLabel" type="Label" parent="TopRight"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -10.0
offset_right = -20.0
offset_bottom = 10.0
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Score: 0"
horizontal_alignment = 2

[node name="CoinsLabel" type="Label" parent="TopRight"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "Coins: 0"
horizontal_alignment = 2

[node name="BottomRight" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0

[node name="WeaponDisplay" type="HBoxContainer" parent="BottomRight"]
offset_left = 0.0
offset_top = 0.0
offset_right = 200.0
offset_bottom = 60.0

[node name="NotificationManager" type="CanvasLayer" parent="."]
layer = 20

[node name="NotificationManager" parent="NotificationManager" instance=ExtResource("2")]
